# bookish-fortnight

./: .gitignore  Cargo.toml  README.md  index.html
src/: auth.rs  errors.rs  flash.rs  lib.rs  main.rs  navbar.rs  router.rs  store.rs  task_processor.rs  tasks.rs
src/api/: login.rs  mod.rs  tasks.rs  todo.txt
src/html/: mod.rs  single_task.rs
src/microdata/: mod.rs
src/static/: button.css  login.css  navbar.css  task-form.css  task_improve.css  task_view.css
