[package]
name = "projectdo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
reqwasm = "0.5.0"
route-recognizer = "0.3.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
stylist = { version = "0.11.0", features = ["yew", "parser"] }
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.0"
